# ShiroRuntime

./: .gitignore  .gitmodules  LICENSE  README.md
.github/ISSUE_TEMPLATE/: feature_request.md  issue-report.md
.github/workflows/: codeql-analysis.yml  codeql.yml  linux.yml  windows.yml
Source/: CMakeLists.txt  Main.cpp
Source/Test/: CMakeLists.txt  Test_Main.cpp
